--- a/rover/partials/payment/rvDepositBalancePartial.html
+++ b/rover/partials/payment/rvDepositBalancePartial.html
@@ -107,9 +107,11 @@
     </button>
 
     <button type="button"
+
             ng-click="submitPayment()"
-            class="button green"
-            ng-hide="shouldHidePaymentButton()">
+            class="button"
+            ng-disabled="shouldHidePaymentButton()"
+            ng-class="{'green': !shouldHidePaymentButton(),'grey':shouldHidePaymentButton()}">
         Make Payment
     </button>
 </div>
