--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -381,8 +381,6 @@
          &.align-center {
             #flexbox > .parent('', center, '', '');
             
-            .button:nth-child(2),
-            .button:nth-child(3) { margin-left: 40px; }
         }
 
         &.small-text {
@@ -1220,3 +1218,14 @@
             }
         }
     }
+
+#actions {
+    &.languages {
+        .language {
+            margin-right: 15px;
+            background: @white;
+            color: @black;
+            line-height: normal;
+        }
+    }
+}
