--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -501,7 +501,17 @@
     right:9%;
 }
 
-
+#actions {
+    &.languages {
+        .language {
+            box-shadow: inset 0 0 0 6px #dededc;
+            &.selected  {
+                color: @white;
+                background: transparent;
+            }
+        }
+    }
+}
 
 
 
