CICO-34193 fixing yellow bg in res summary

--- a/rover/partials/payment/rvReservationSummaryDepositPartial.html
+++ b/rover/partials/payment/rvReservationSummaryDepositPartial.html
@@ -1,4 +1,4 @@
-<div class="notice deposit">
+<div class="deposit" ng-class="{'notice' : !paymentAttempted }">
     <section ng-if="!paymentAttempted">
         <p>Deposit required: <strong>{{depositPolicyName}}</strong>.</p>
 
