--- a/stylesheets/less/app/screens/05.reservation-card.less
+++ b/stylesheets/less/app/screens/05.reservation-card.less
@@ -622,6 +622,10 @@
                         .show;
                         .size(18px, 28px);
                         .pull-left;
+                        
+                        &.red-off {
+                            .gradient(@redEnd, @redStart);
+                        }
 
                         &.on {
                             .gradient(@greenEnd, @greenStart);
