--- a/rover/partials/housekeeping/rvHkRoomStatus.html
+++ b/rover/partials/housekeeping/rvHkRoomStatus.html
@@ -181,7 +181,7 @@
                 <!-- Show only if room is queued -->
                 <div bo-if="room.is_queued" class="icons icon-queued has-time">
                     Queued
-                    <span class="time" pretty-time-span="room.is_queued_till"></span>
+                    <span class="time" pretty-time-ago="room.is_queued_till"></span>
                 </div>
 
                 <!-- IF VIEW BY TASK, ADD THIS: -->
