--- a/rover/partials/search/rvSearchReservationsWidget.html
+++ b/rover/partials/search/rvSearchReservationsWidget.html
@@ -100,7 +100,7 @@
                                 	ng-if="isReservationQueued(row.is_reservation_queued, row.is_queue_rooms_on, row.reservation_status)"
                                 >
                                 	Queued
-                                	<span class="time" pretty-time-span="row.is_queued_till"></span>
+                                	<span class="time" pretty-time-ago="row.is_queued_till"></span>
                                 </span>
                             </div>
 
