--- a/rover/partials/workManagement/rvWorkManagementMultiSheet.html
+++ b/rover/partials/workManagement/rvWorkManagementMultiSheet.html
@@ -174,6 +174,15 @@
                                     <span class="icons icon-suite" ng-if="multiSheetState.allRooms[room.room_index].is_suite">Suite room</span>
                                     {{task.room_no}}
                                 </h3>
+                                
+                                <h3>
+                                    <span class="icons icon-suite" ng-if="multiSheetState.allRooms[room.room_index].is_suite">Suite room</span>
+                                    {{task.room_no}}
+                                    <span class="icons icon-queued has-time" ng-if="multiSheetState.allRooms[room.room_index].is_queued">
+                                        Queued
+                                        <span class="time" pretty-time-ago="multiSheetState.allRooms[room.room_index].is_queued_till"></span>
+                                    </span>
+                                </h3>
                                 <span class="task">{{task.task_name}}</span>
                                 <!-- If task is completed, IT SHOULD BE LOCKED AND USER SHOULD NOT BE ABLE TO MOVE IT. Also, add:-->
                                 <span class="icons icon-ok-10" ng-show="task.is_completed"></span>
