CICO-30827 - Style update

--- a/stylesheets/less/app/screens/05.reservation-card.less
+++ b/stylesheets/less/app/screens/05.reservation-card.less
@@ -623,13 +623,13 @@
                         .size(18px, 28px);
                         .pull-left;
                         
-                        &.red-off {
-                            .gradient(@redEnd, @redStart);
-                        }
-
                         &.on {
                             .gradient(@greenEnd, @greenStart);
                             .switch-icon { left: 12px; }
+
+                            &.red-on {
+                                .gradient(@redEnd, @redStart);
+                            }
                         }
                     }
 
