CICO-33040 updates design of autocomplete nationality screen for Yotel

--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -192,3 +192,13 @@ select {
       color: @brandColor;
     }
 
+.clear-text-icon{
+    top: 15px;
+    position: relative;
+    right: 73px;
+}
+
+.left-aligned-next{
+    right: 30px;
+    position: relative;
+}
