CICO-29533 Implemented the 'respecting' of language turn on/off functionality

--- a/admin/partials/zestStation/adZestStationLanguageConfig.html
+++ b/admin/partials/zestStation/adZestStationLanguageConfig.html
@@ -13,7 +13,7 @@
 		<ol class="cms-tree" ui-sortable="sortableOptions" ng-model="languageList">
             <li class="branch" ng-repeat="language in languageList">
                 <div class="sort">
-                    <a class="cms-name">{{language.name}}</a>
+                    <a class="cms-name first-letter-capitalize">{{language.name}}</a>
                 </div>
             </li>
         </ol>
