--- a/rover/partials/workManagement/rvWorkManagementMultiSheet.html
+++ b/rover/partials/workManagement/rvWorkManagementMultiSheet.html
@@ -94,7 +94,7 @@
                             {{task.room_no}}
                             <span ng-if="multiSheetState.allRooms[room.room_index].is_queued" class="icons icon-queued has-time">
                                 Queued
-                                <span class="time" pretty-time-span="multiSheetState.allRooms[room.room_index].is_queued_till"></span>
+                                <span class="time" pretty-time-ago="multiSheetState.allRooms[room.room_index].is_queued_till"></span>
                             </span>
                         </h3>
                         <span class="task">{{task.task_name}}</span>
@@ -169,12 +169,7 @@
                                     <span ng-class="getReservationStatusClass(multiSheetState.allRooms[room.room_index])"
                                         ng-bind="getReservationStatusValue(multiSheetState.allRooms[room.room_index])"></span>
                                     <span ng-class="getCurrentStatusClass(multiSheetState.allRooms[room.room_index])">{{ multiSheetState.allRooms[room.room_index].current_status }}</span>
-                                </div>
-                                <h3>
-                                    <span class="icons icon-suite" ng-if="multiSheetState.allRooms[room.room_index].is_suite">Suite room</span>
-                                    {{task.room_no}}
-                                </h3>
-                                
+                                </div>                               
                                 <h3>
                                     <span class="icons icon-suite" ng-if="multiSheetState.allRooms[room.room_index].is_suite">Suite room</span>
                                     {{task.room_no}}
