CICO-34283 Zest station Fixed the issues with default selection

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1376,6 +1376,8 @@
             background: @white;
             color: @black;
             line-height: normal;
+            height: 50px;
+            font-size: 16px;
         }
     }
 }
