CICO-34151 fixes issues with elements animation delay in the Upsell Early Checkin screen due to excessive data in the angular multiselect plugin

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1394,3 +1394,15 @@ div.move-all-icons{
         #border-radius > .rounded(4px);
     }
 }
+.block-code-popup-exclude-section{
+    position: relative;
+    display:block;
+    & > div > .multi-select-codes{
+      .button {
+        width: 310px;
+      }
+    }
+}
+.checkBoxContainer{
+  padding:0px !important;
+}
