--- a/admin/partials/earlyCheckin/adEarlyCheckin.html
+++ b/admin/partials/earlyCheckin/adEarlyCheckin.html
@@ -15,12 +15,11 @@
 						<h3><span translate>EARLY_CHECKIN_GENERAL</span> </h3>
 					</div>
 					<fieldset class="holder left">
-						
-
 						<!-- Switch -->
 						<div class="entry">
 							<label for="early-checkin-upsell" translate>EARLY_CHECKIN_UPSELL</label>
-							<div id="div-early-checkin-upsell" class="switch-button single" ng-class="{ on : upsellData.is_early_checkin_allowed}"  ng-click="switchClicked()">
+							<div id="div-early-checkin-upsell" class="switch-button single" ng-class="{ on : upsellData.is_early_checkin_allowed}"  
+							ng-click="switchClicked()">
 								<input type="checkbox" value="10" name="late-checkout-upsell" id="late-checkout-upsell">
 								<span class="switch-icon"></span>
 
@@ -298,29 +297,15 @@
 						</div>
 					</fieldset>
 					<fieldset class="holder full-width">
-					<div class="entry">
-						<label translate>BLOCK_CODES_TO_EXCLUDE_FROM_EARLY_CHECK_IN</label>
-						<div
-						multi-select
-						input-model="block_codes"
-						button-label="group_code"
-						item-label="group_code"
-						tick-property="ticked"
-						max-labels="0"
-						default-label="None selected"
-						max-height="300px"
-						>
+					<div class="entry" >
+						<button translate="" ng-click="clickOpenBlockCodeDialog()"  class="button green" translate="">OPEN_BLOCK_CODES_DIALOG</button>
 					</div>
-					</div>
-
-					<div class="entry entry-padding-left" ><label>&nbsp;&nbsp;</label>
-						<button translate="" ng-click="clickExcludeBlockCode()"  class="button green" translate="">EXCLUDE_BLOCK_CODES</button>
-					</div>
-
+					
 					<div class="entry full-width" ng-show="excludedBlockCodes.length>0">
 						<div class='entry' >
 								<label> <h4 translate>EXCLUDED_BLOCK_CODES</h4> </label>
 						</div>
+
 						<div id='room-type-details' ng-repeat="blockCode in excludedBlockCodes">
 							<div class="entry full-width room-type-details" >
 								<div class="entry">
