CICO-34151 code cleanup

--- a/admin/partials/earlyCheckin/adEarlyCheckin.html
+++ b/admin/partials/earlyCheckin/adEarlyCheckin.html
@@ -18,8 +18,7 @@
 						<!-- Switch -->
 						<div class="entry">
 							<label for="early-checkin-upsell" translate>EARLY_CHECKIN_UPSELL</label>
-							<div id="div-early-checkin-upsell" class="switch-button single" ng-class="{ on : upsellData.is_early_checkin_allowed}"  
-							ng-click="switchClicked()">
+							<div id="div-early-checkin-upsell" class="switch-button single" ng-class="{ on : upsellData.is_early_checkin_allowed}" ng-click="switchClicked()">
 								<input type="checkbox" value="10" name="late-checkout-upsell" id="late-checkout-upsell">
 								<span class="switch-icon"></span>
 
