--- a/admin/partials/earlyCheckin/adEarlyCheckinBlockCodePopup.html
+++ b/admin/partials/earlyCheckin/adEarlyCheckinBlockCodePopup.html
@@ -3,16 +3,14 @@
 		<div class="entry block-code-popup-exclude-section">
 			<div class="entry">
 				<label translate>BLOCK_CODES_TO_EXCLUDE_FROM_EARLY_CHECK_IN</label>
-				<div
-					multi-select
+				<div multi-select
 					input-model="block_codes"
 					button-label="group_code"
 					item-label="group_code"
 					tick-property="ticked"
 					max-labels="0"
 					default-label="None selected"
-					max-height="300px"
-					>
+					max-height="300px">
 				</div>
 			</div>
 			<div class="entry top-padding-20">
