--- a/rover/partials/reports/shared/summaryCounts.html
+++ b/rover/partials/reports/shared/summaryCounts.html
@@ -136,7 +136,7 @@
 
 <!-- Daily production report -->
 <ul ng-if="isThisReport(['DAILY_PRODUCTION_ROOM_TYPE', 'DAILY_PRODUCTION_RATE'])" class="totals">
-    <li>Total Revenue<span>{{ summaryCounts.rate_revenue | currency:currencySymbol:2 }}</span></li>
+    <li>Total Revenue<span>{{ summaryCounts.room_revenue | currency:currencySymbol:2 }}</span></li>
     <li>ADR<span>{{ summaryCounts.adr | currency:currencySymbol:2 }}</span></li>
     <li>Room Revenue<span>{{ summaryCounts.actual_revenue | currency:currencySymbol:2 }}</span></li>
 </ul>
