--- a/admin/partials/housekeeping/adHousekeeping.html
+++ b/admin/partials/housekeeping/adHousekeeping.html
@@ -14,7 +14,7 @@
 					<ad-toggle-button label="{{'ROOM ASSIGNMENT HIGHEST TO LOWEST' | translate}}" is-checked="data.list_rooms_in_highest_to_lowest_floor_order" div-class=""></ad-toggle-button>
 					<ad-toggle-button label="{{'ROOM READY NOTIFICATION' | translate}}" is-checked="data.is_room_ready_notification_on" div-class=""></ad-toggle-button>
 					<ad-toggle-button label="{{'ENABLE_AUTO_CHECKIN' | translate}}" is-checked="data.is_room_ready_auto_checkin_on" div-class="" ></ad-toggle-button>
-					<ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.email" label = "{{'EMAIL_ACCOUNTS_TO_RECIEVE_QUEUE_RES_ALERT'| translate}} " placeholder = "{{'EMAIL_ACCOUNTS_TO_RECIEVE_QUEUE_RES_ALERT'|translate }}" disabled="!data.is_queue_rooms_on" ></ad-textarea>
+					<ad-textarea hide="isStandAlone" rows="4" div-class="full-width" text-area-class="full-width" value="data.email" label = "{{'EMAIL_ACCOUNTS_TO_RECIEVE_QUEUE_RES_ALERT'| translate}} " placeholder = "{{'EMAIL_ACCOUNTS_TO_RECIEVE_QUEUE_RES_ALERT'|translate }}" disabled="!data.is_queue_rooms_on" ></ad-textarea>
 					<ad-checkbox is-disabled="!data.use_inspected" is-checked="data.checkin_inspected_only" label="{{'CHECK_IN_TO_INSPECTED_ROOMS_ONLY' | translate}}" div-class="full-width"></ad-checkbox>
 
                                             <ad-checkbox is-checked="data.enable_room_status_at_checkout" label="{{'ROOM_STATUS_UPDATE_CHECKOUT_LABEL' | translate}}" div-class="full-width"></ad-checkbox>
