CICO-33040 updates css for autocomplete in nationality select screen in Station

--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -178,8 +178,8 @@ select {
     .ui-autocomplete{
         overflow:hidden;
         max-height: 215px !important;
-        border-bottom: 2px solid @transparentColor;
-        border-radius: 0 0 6px 6px;
+        border: 2px solid @white;
+        border-radius: 2px;
     }
     .ui-autocomplete .ui-menu-item {
       background:@white;
