--- a/rover/partials/reports/occupancyRevenueReport/rvOccupancyRevenueReport.html
+++ b/rover/partials/reports/occupancyRevenueReport/rvOccupancyRevenueReport.html
@@ -78,16 +78,16 @@
                                     <tbody>
                                             <tr ng-repeat="occupancy in stateStore.occupancy track by $index">
                                                     <!-- Add class "double-row" if showing all/nightly reservation breakdown -->
-                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}} ng-class="{'negative' : getValue(occupancy.key,$index) < 0}">
-                                                            {{absoulte(getValue(occupancy.key,$index))}}
+                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}}>
+                                                            {{getValue(occupancy.key,$index)}}
                                                     </td>
                                             </tr>
                                             <tr ng-show="marketExists">
                                                 <th ng-repeat="date in selectedDays track by $index" colspan="{{1 + !!chosenLastYear + !!chosenVariance}}">{{date | date : shortMonthAndDate }}</th>
                                             </tr>
-                                            <tr ng-repeat="market in markets.data" ng-show="market.selected" ng-init="outerIndex = $index" ng-class="{'negative' : getMarketOccupancyValue(outerIndex,$index) < 0}">
+                                            <tr ng-repeat="market in markets.data" ng-show="market.selected" ng-init="outerIndex = $index">
                                                     <td ng-repeat="n in getNumber() track by $index" ng-class="getClass($index)">
-                                                            {{absoulte(getMarketOccupancyValue(outerIndex,$index)) | number:0}}
+                                                            {{getMarketOccupancyValue(outerIndex,$index) | number:0}}
                                                     </td>
                                             </tr>
                                             <tr ng-show="markets.options.selectAll" ng-init="outerIndex = markets.data.length">
@@ -97,22 +97,22 @@
                                             </tr>
 
                                             <tr ng-repeat="occupancyTotal in stateStore.occupancyTotals track by $index" ng-class="{'double-row': !!results.nightly}">
-                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}} ng-class="{'negative' : getValue(occupancyTotal.key,$index) < 0}">
-                                                            <strong>{{absoulte(getValue(occupancyTotal.key,$index)) | number:2}} %</strong>
-                                                            <span ng-if="!!results.nightly">({{absoulte(getNigtlyValue(occupancyTotal.key,$index)) | number:2}}% N.)</span>
+                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}}>
+                                                            <strong>{{getValue(occupancyTotal.key,$index) | number:2}} %</strong>
+                                                            <span ng-if="!!results.nightly">({{getNigtlyValue(occupancyTotal.key,$index) | number:2}}% N.)</span>
                                                     </td>
                                             </tr>
                                             <tr ng-repeat="revenue in stateStore.revenues track by $index">
-                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}} ng-class="{'negative' : getValue(revenue.key,$index) < 0}">
-                                                            {{ absoulte(getValue(revenue.key,$index)) | currency:currencySymbol:2 }}
+                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}}>
+                                                            {{ getValue(revenue.key,$index) | currency:currencySymbol:2 }}
                                                     </td>
                                             </tr>
                                             <tr ng-show="marketExists">
                                                 <th ng-repeat="date in selectedDays track by $index" colspan="{{1 + !!chosenLastYear + !!chosenVariance}}">{{date | date : shortMonthAndDate }}</th>
                                             </tr>
-                                            <tr ng-repeat="market in markets.data" ng-show="market.selected" ng-init="outerIndex = $index" ng-class="{'negative' : getMarketRevenueValue(outerIndex,$index) < 0}">
+                                            <tr ng-repeat="market in markets.data" ng-show="market.selected" ng-init="outerIndex = $index">
                                                     <td ng-repeat="n in getNumber() track by $index" ng-class="getClass($index)">
-                                                            {{ absoulte(getMarketRevenueValue(outerIndex,$index)) | currency:currencySymbol:2 }}
+                                                            {{getMarketRevenueValue(outerIndex,$index) | currency:currencySymbol:2 }}
                                                     </td>
                                             </tr>
                                             <tr ng-show="markets.options.selectAll" ng-init="outerIndex = markets.data.length">
@@ -124,13 +124,13 @@
                                                 <th ng-repeat="date in selectedDays track by $index" colspan="{{1 + !!chosenLastYear + !!chosenVariance}}">{{date | date : shortMonthAndDate }}</th>
                                             </tr>
                                             <tr ng-repeat="chargeGroup in results.charge_groups" ng-init="outerIndex = $index">
-                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}} ng-class="{'negative' : getChargeCodeValue(outerIndex,$index) < 0}">
-                                                            {{absoulte(getChargeCodeValue(outerIndex,$index)) | currency:currencySymbol:2 }}
+                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}}>
+                                                            {{getChargeCodeValue(outerIndex,$index) | currency:currencySymbol:2 }}
                                                     </td>
                                             </tr>
                                             <tr ng-repeat="revenueTotal in stateStore.revenueTotals">
-                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}} ng-class="{'negative' : getValue(revenueTotal.key,$index) < 0}">
-                                                            <strong>{{absoulte(getValue(revenueTotal.key,$index)) | currency:currencySymbol:2 }}</strong>
+                                                    <td ng-repeat="n in getNumber() track by $index" class={{getClass($index)}}>
+                                                            <strong>{{getValue(revenueTotal.key,$index) | currency:currencySymbol:2 }}</strong>
                                                     </td>
                                             </tr>
                                     </tbody>
