--- a/admin/partials/common/addRemoveSection.html
+++ b/admin/partials/common/addRemoveSection.html
@@ -12,99 +12,100 @@
                         </h3>
                         <select ng-change="selectRate(selectedRate)" style="width:inherit; background-color:#F8F8F8;" ng-class="{'inactive':selectedRate.placeholder === true}" ng-model="selectedRate" ng-options="rate.name for rate in rateData"></select>
                     </div>
-                
-                
-                
-                    <div class="entry has-sortable">
-                        
-                            <label>Included Room Types</label>
-                            <ul data-type="target"
-                                class="boxes sortable empty short-list ui-sortable"
-                                data-placeholder="Drop a room type here to include changes"
-                                
-                                data-drop="true" 
-                                ng-model='selectedIncludedRoomType' 
-                                jqyoui-droppable="{multiple:true, onDrop: 'dropEvent(toincluded)'}"
-                                style="overflow-y: scroll !important;" 
-                                data-jqyoui-options="{accept:'.non-assigned-room-types'}">
 
-                                    <li ng-repeat="type in includedRoomTypes track by $index" 
-                                    class="assigned-room-types li-draggable"
 
-                                        data-drag="true" 
-                                        data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}"
-                                        ng-model="includedRoomTypeSelected" 
-					jqyoui-draggable ="{index: {{$index}}, animate:false, onStop:'showCurrentDragItem(type)', onStart:'startDragItem(type, 1)'}"
-                                        ng-hide="!type.name" 
-                                        ng-class="{'selected': selectedIncludedRoomTypeIndex === $index}" 
-                                        ng-click="selectIncludedRoomType(type, $event, $index)">
-                                        
-                                                <span class="icons icon-handle"></span>
-                                                <span class="icons icon-handle"></span>
-                                                {{type.name}}
-                                    </li>
-                                    <span class="placeholder ui-state-disabled" ng-show="includedRoomTypes.length == 0">Drop a room type here to include changes</span>
-                            </ul>
-                            
-                    </div>
+
+                <div class="entry has-sortable" >
+                    <label>Excluded Room Types</label>
+                    <ul data-placeholder="Drop a room type here to exclude changes"
+
+                        class="boxes sortable ui-sortable short-list"
+                        data-drop="true"
+                        ng-model='excludedRoomTypes'
+
+                        data-jqyoui-options="{accept:'.assigned-room-types'}"
+                        jqyoui-droppable="{multiple:true, onDrop: 'dropEvent(toexcluded)'}"
+                        data-type="source"
+                    >
+
+                        <li ng-repeat="roomtype in excludedRoomTypes track by $index"
+                            class="non-assigned-room-types li-draggable"
+                            data-drag="true"
+                            data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}"
+                            ng-model="excludedRoomTypeSelected"
+
+                            jqyoui-draggable ="{index: {{$index}}, animate:false, onStop:'showCurrentDragItem(roomtype)', onStart:'startDragItem(roomtype, 2)' }"
+                            ng-hide="!roomtype.name"
+                            ng-class="{'selected': selectedExcludedRoomTypeIndex === $index}"
+
+
+                            ng-click="selectExcludedRoomType(roomtype, $event, $index)">
+                            <span class="icons icon-handle"></span>
+                            <span class="icons icon-handle"></span>
+                            {{roomtype.name}}
+                        </li>
+
+                    </ul>
+                </div>
 
 
                     <div class="entry movers">
                         
                         <span data-type="source" 
                               class="icons icon-mover-right to-target" 
-                              ng-click="leftToRight()" 
-                              ng-class="{'active': selectedIncludedRoomTypeIndex != -1}">Add Rate
+                              ng-click="includeRoomType()"
+                              ng-class="{'active': selectedExcludedRoomTypeIndex != -1}">Add Rate
                         </span>
                         <span data-type="source" 
                               class="icons icon-mover-left to-source" 
-                              ng-click="rightToLeft()" 
-                              ng-class="{'active': selectedExcludedRoomTypeIndex != -1}">Remove Rate
+                              ng-click="excludeRoomType()"
+                              ng-class="{'active': selectedIncludedRoomTypeIndex != -1}">Remove Rate
                         </span>
 
                         <div class='move-all-icons'>
                             <div class="green_gradient icons">
-                                    <span class="to-source green_mover icons_rates" data-type="source" ng-click="moveAllRight()"></span>
+                                    <span class="to-source green_mover icons_rates" data-type="source" ng-click="includeAllRoomTypes()"></span>
                             </div>
                             <div class="red_gradient icons">
-                                    <span class="to-target  red_mover icons_rates" data-type="target" ng-click="moveAllLeft()"></span>
+                                    <span class="to-target  red_mover icons_rates" data-type="target" ng-click="excludeAllRoomTypes()"></span>
                             </div>
                         </div>
                         
                     </div>
                 
-                    <div class="entry has-sortable" >
-                        <label>Excluded Room Types</label>
-                        <ul data-placeholder="Drop a room type here to exclude changes" 
 
-                            class="boxes sortable ui-sortable short-list" 
-                            data-drop="true" 
-                            ng-model='excludedRoomTypes' 
+                <div class="entry has-sortable">
 
-                            data-jqyoui-options="{accept:'.assigned-room-types'}"
-                            jqyoui-droppable="{multiple:true, onDrop: 'dropEvent(toexcluded)'}"  
-                            data-type="source" 
-                            >
+                    <label>Included Room Types</label>
+                    <ul data-type="target"
+                        class="boxes sortable empty short-list ui-sortable"
+                        data-placeholder="Drop a room type here to include changes"
 
-                                <li ng-repeat="roomtype in excludedRoomTypes track by $index" 
-                                        class="non-assigned-room-types li-draggable"
-                                    data-drag="true" 
-                                    data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}"
-                                    ng-model="excludedRoomTypeSelected" 
+                        data-drop="true"
+                        ng-model='selectedIncludedRoomType'
+                        jqyoui-droppable="{multiple:true, onDrop: 'dropEvent(toincluded)'}"
+                        style="overflow-y: scroll !important;"
+                        data-jqyoui-options="{accept:'.non-assigned-room-types'}">
 
-                                    jqyoui-draggable ="{index: {{$index}}, animate:false, onStop:'showCurrentDragItem(roomtype)', onStart:'startDragItem(roomtype, 2)' }"
-                                    ng-hide="!roomtype.name" 
-                                    ng-class="{'selected': selectedExcludedRoomTypeIndex === $index}"
-                                    
+                        <li ng-repeat="type in includedRoomTypes track by $index"
+                            class="assigned-room-types li-draggable"
 
-                                    ng-click="selectExcludedRoomType(roomtype, $event, $index)">
-                                            <span class="icons icon-handle"></span>
-                                            <span class="icons icon-handle"></span>
-                                            {{roomtype.name}}
-                                </li>        
-                            
-                        </ul>
-                    </div>
+                            data-drag="true"
+                            data-jqyoui-options="{revert: 'invalid', helper:'clone',appendTo: 'body'}"
+                            ng-model="includedRoomTypeSelected"
+                            jqyoui-draggable ="{index: {{$index}}, animate:false, onStop:'showCurrentDragItem(type)', onStart:'startDragItem(type, 1)'}"
+                            ng-hide="!type.name"
+                            ng-class="{'selected': selectedIncludedRoomTypeIndex === $index}"
+                            ng-click="selectIncludedRoomType(type, $event, $index)">
+
+                            <span class="icons icon-handle"></span>
+                            <span class="icons icon-handle"></span>
+                            {{type.name}}
+                        </li>
+                        <span class="placeholder ui-state-disabled" ng-show="includedRoomTypes.length == 0">Drop a room type here to include changes</span>
+                    </ul>
+
+                </div>
 
             </fieldset>
             <div class="actions">
