CICO-34109 - Neighbors CSS styles

--- a/stylesheets/less/app/04_layout.less
+++ b/stylesheets/less/app/04_layout.less
@@ -264,6 +264,12 @@ body { overflow: hidden; }
 				top: 60px;
 				.calc-height(100, 120);
 			}
+
+			/* Neighbors ***/
+	        &#neighbors-activity {
+	            top: 120px;
+	            .calc-height(100, 180);
+	        }
 		}
 	}
 
@@ -988,6 +994,13 @@ body { overflow: hidden; }
 					height: 110px;
 				}
 			}
+
+			/* Neighbors ***/
+	        &.neighbors-search {
+	            .search { 
+	                .calc-width(100, 50); 
+	            }
+	        }
 		}
 	}
 
