--- a/stylesheets/less/app/05-A_components.less
+++ b/stylesheets/less/app/05-A_components.less
@@ -36,8 +36,8 @@
 /* Add ons                  ==============================*/
 @import "screens/09.addons.less";
 
-/* Social Lobby             ==============================
-@import "screens/10.social-lobby.less"; */
+/* Neighbors                ==============================*/ 
+@import "screens/10.neighbors.less";
 
 /* Messages & Reviews       ==============================
 @import "screens/11.messages-reviews.less"; */
