CICO-34120: Fixed issue with multiple call

--- a/rover/partials/financials/accountsReceivables/rvAccountsReceivables.html
+++ b/rover/partials/financials/accountsReceivables/rvAccountsReceivables.html
@@ -1,4 +1,4 @@
-<span ng-controller="RVAccountsReceivablesController">
+<span>
 
     <!-- Search form -->
     <form method="get" action="" name="accounts-receivables-search-form" id="accounts-receivables-search-form" class="search-form has-options three-options" role="search">
@@ -86,8 +86,8 @@
                             </div>
                         </a>
                     </li>
-                    
-                </ul>        
+
+                </ul>
             </div>
         </div>
     </section>
