--- a/rover/partials/reservation/rvSummaryAndConfirm.html
+++ b/rover/partials/reservation/rvSummaryAndConfirm.html
@@ -236,7 +236,8 @@
                             has-permission='hasPermissionToMakePayment()'
                             form-template-url='/assets/partials/payment/rvReservationSummaryDepositPartial.html'
                             first-name="{{guestCardData.contactInfo.first_name}}"
-                            last-name="{{guestCardData.contactInfo.last_name}}">
+                            last-name="{{guestCardData.contactInfo.last_name}}"
+                            reservation-ids="reservationData.reservationIds">
                     </snt-payment>
                     <div class="actions" ng-hide="showCCPage">
                         <button type="button"
