CICO-30036 Added admin changes

--- a/admin/partials/stationary/adStationary.html
+++ b/admin/partials/stationary/adStationary.html
@@ -187,6 +187,7 @@
                     <label translate>CUSTOM_TEXT</label>
                     <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.custom_text_header" label="{{'HEADER'| translate}} " placeholder="{{'CUSTOM_TEXT_PLACEHOLDER' | translate }}"></ad-textarea>
                     <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.custom_text_footer" label="{{'FOOTER'| translate}} " placeholder="{{'CUSTOM_TEXT_PLACEHOLDER' | translate }}"></ad-textarea>
+                    <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="data.ar_invoice_billing_text" label="{{'AR_INVOICE_BILLING_TEXT'| translate}}" placeholder="{{'CUSTOM_TEXT_PLACEHOLDER' | translate }}"></ad-textarea>
                 </div>
             </fieldset>
             <fieldset class="holder right">
