CICO-24928 85% completed. Remaining work can be completed when new api's become available.

--- a/rover/partials/accounts/accountsTab/rvAccountsSummary.html
+++ b/rover/partials/accounts/accountsTab/rvAccountsSummary.html
@@ -68,7 +68,7 @@
 
                 <button type="button" class="button" ng-class="{'brand-colors' : !isInAddMode() && accountSummaryData.newNote.trim()!=='' , 'grey' : isInAddMode() || accountSummaryData.newNote.trim()===''}" ng-click="saveAccountNote()" ng-show="accountSummaryData.editingNote===null" translate>POST</button>
 
-                <button type="button" class="button" ng-class="{'brand-colors' : !isInAddMode(), 'grey' : isInAddMode()||accountSummaryData.newNote.trim()===''}" ng-click="updateActiveAccountNote()" ng-show="accountSummaryData.editingNote!==null" ng-disabled="accountSummaryData.newNote.trim()===''">Save</button>
+                <button type="button" class="button" ng-class="{'brand-colors' : !isInAddMode() && accountSummaryData.newNote.trim()!=='', 'grey' : isInAddMode()||accountSummaryData.newNote.trim()===''}" ng-click="updateActiveAccountNote()" ng-show="accountSummaryData.editingNote!==null" ng-disabled="accountSummaryData.newNote.trim()===''">Save</button>
 
                 <button type="button" class="button blank" ng-click="cancelEditModeAccountNote()" ng-show="accountSummaryData.editingNote!==null">Cancel</button>
             </div>
@@ -84,7 +84,7 @@
                             <span class="time">{{note.posted_date}}</span>
                             <span class="date">{{note.posted_time}}</span>
                         </time>
-                        <button type="button" class="icons icon-trash" ng-click="removeAccountNote(note.note_id)">Delete post</button>
+                        <button type="button" class="icons icon-trash" ng-click="removeAccountNote($event, note.note_id)">Delete post</button>
                     </div>
                     <p>{{note.description}}</p>
                 </li>
