--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -422,3 +422,48 @@
       padding-right:0px !important;
     }
 }
+
+/**************************** Footer Styles ***********************/
+.main-container{
+    height:100%;
+}
+#footer{
+    bottom:0;
+    width: 100%;
+    a{
+      float:left;
+      color:#000 !important;
+      text-align:center;
+      text-decoration: underline !important;
+      margin-left:2%;
+    }
+}
+@media (max-width: 900px) {
+    #footer{
+      padding: 10% 0;
+      a{
+        width:100%;
+        margin-bottom:5px;
+        font-size: 12px;
+      }
+    }
+}
+@media (min-width: 900px) {
+
+  #footer{
+    padding: 15% 10% 5%;
+    bottom:0;
+    a{
+      font-size: 18px;
+    }
+  }
+  #footer.single-footer a{
+        width:100%;
+  }
+  #footer.double-footer a{
+        width:45%
+  }
+  #footer.triple-footer a{
+        width:30%;
+  }
+}
