CICO-34245 adding styles in zestweb to include footer

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -427,19 +427,18 @@
 .main-container{
     height:100%;
 }
-#footer{
+#zest-footer{
     bottom:0;
     width: 100%;
     a{
       float:left;
-      color:#000 !important;
       text-align:center;
       text-decoration: underline !important;
       margin-left:2%;
     }
 }
 @media (max-width: 900px) {
-    #footer{
+    #zest-footer{
       padding: 10% 0;
       a{
         width:100%;
@@ -450,20 +449,20 @@
 }
 @media (min-width: 900px) {
 
-  #footer{
+  #zest-footer{
     padding: 15% 10% 5%;
     bottom:0;
     a{
       font-size: 18px;
     }
   }
-  #footer.single-footer a{
+  #zest-footer.single-footer a{
         width:100%;
   }
-  #footer.double-footer a{
+  #zest-footer.double-footer a{
         width:45%
   }
-  #footer.triple-footer a{
+  #zest-footer.triple-footer a{
         width:30%;
   }
 }
