CICO-30036 Updated print,email templates

--- a/rover/partials/bill/rvPrintBillCard.html
+++ b/rover/partials/bill/rvPrintBillCard.html
@@ -162,5 +162,9 @@
 </table>
 
 <div class="invoice-footer text-center">
+    {{printData.ar_invoice_billing_text}}
+</div>
+
+<div class="invoice-footer text-center">
     {{printData.custom_text_footer}}
 </div>
