CICO-33706 : Re-positioned open-all, close all Button.

--- a/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
+++ b/rover/partials/rateManager_/topBar/rvRateManagerTopBar.html
@@ -30,6 +30,20 @@
         </li>
          
     </ul>
+    <ul class="actions">
+        <li>
+            <!-- Remove class .green if they are closed, not open -->
+            <button class="button rm-buttonOpenClose green">
+                Open All
+            </button>  
+        </li>
+        <li>
+             <!-- Add class .red if they are closed, not open -->
+            <button class="button  rm-buttonOpenClose">
+                Close All
+            </button>
+        </li>
+    </ul>
     <!-- CICO-27447 Temporarily Hiding Chart View -->
     <ul class="display-mode" ng-if="false">
         
